--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -85,6 +85,7 @@ body {
 }
 /* Buttons */
 .btn {
+  color: initial;
   border-radius: 0;
   font-weight: 600;
   border-width: 2px;
@@ -151,12 +152,12 @@ body {
 .btn-primary.active {
   background-color: #ffbc00;
   border-color: #ffbc00;
-  color: #ffffff;
+  color: #ffffff !important;
 }
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary.focus {
-  color: #ffffff;
+  color: #ffffff !important;
   background-color: #b38400;
   border-color: #b38400;
 }
@@ -171,12 +172,12 @@ body {
 .btn-secondary.active {
   background-color: #3e97d1;
   border-color: #3e97d1;
-  color: #ffffff;
+  color: #ffffff !important;
 }
 .btn-secondary:hover,
 .btn-secondary:focus,
 .btn-secondary.focus {
-  color: #ffffff;
+  color: #ffffff !important;
   background-color: #256e9d;
   border-color: #256e9d;
 }
@@ -191,12 +192,12 @@ body {
 .btn-info.active {
   background-color: #ff4100;
   border-color: #ff4100;
-  color: #ffffff;
+  color: #ffffff !important;
 }
 .btn-info:hover,
 .btn-info:focus,
 .btn-info.focus {
-  color: #ffffff;
+  color: #ffffff !important;
   background-color: #b32d00;
   border-color: #b32d00;
 }
@@ -211,12 +212,12 @@ body {
 .btn-success.active {
   background-color: #36d88a;
   border-color: #36d88a;
-  color: #ffffff;
+  color: #ffffff !important;
 }
 .btn-success:hover,
 .btn-success:focus,
 .btn-success.focus {
-  color: #ffffff;
+  color: #ffffff !important;
   background-color: #1fa263;
   border-color: #1fa263;
 }
@@ -231,12 +232,12 @@ body {
 .btn-warning.active {
   background-color: #c1c1c1;
   border-color: #c1c1c1;
-  color: #ffffff;
+  color: #ffffff !important;
 }
 .btn-warning:hover,
 .btn-warning:focus,
 .btn-warning.focus {
-  color: #ffffff;
+  color: #ffffff !important;
   background-color: #9b9b9b;
   border-color: #9b9b9b;
 }
@@ -251,12 +252,12 @@ body {
 .btn-danger.active {
   background-color: #444444;
   border-color: #444444;
-  color: #ffffff;
+  color: #ffffff !important;
 }
 .btn-danger:hover,
 .btn-danger:focus,
 .btn-danger.focus {
-  color: #ffffff;
+  color: #ffffff !important;
   background-color: #1e1e1e;
   border-color: #1e1e1e;
 }
@@ -274,32 +275,32 @@ body {
 .btn-white.active {
   background-color: #ffffff;
   border-color: #ffffff;
-  color: #ffffff;
+  color: #808080 !important;
 }
 .btn-white:hover,
 .btn-white:focus,
 .btn-white.focus {
-  color: #ffffff;
-  background-color: #d4d4d4;
-  border-color: #d4d4d4;
+  color: #808080 !important;
+  background-color: #d9d9d9;
+  border-color: #d9d9d9;
 }
 .btn-white.disabled,
 .btn-white:disabled {
-  color: #ffffff !important;
-  background-color: #d4d4d4 !important;
-  border-color: #d4d4d4 !important;
+  color: #808080 !important;
+  background-color: #d9d9d9 !important;
+  border-color: #d9d9d9 !important;
 }
 .btn-black,
 .btn-black:active,
 .btn-black.active {
   background-color: #333333;
   border-color: #333333;
-  color: #ffffff;
+  color: #ffffff !important;
 }
 .btn-black:hover,
 .btn-black:focus,
 .btn-black.focus {
-  color: #ffffff;
+  color: #ffffff !important;
   background-color: #0d0d0d;
   border-color: #0d0d0d;
 }
@@ -314,12 +315,12 @@ body {
 .btn-primary-outline.active {
   background: none;
   border-color: #997100;
-  color: #997100;
+  color: #997100 !important;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus {
-  color: #ffffff;
+  color: #ffffff !important;
   background-color: #ffbc00;
   border-color: #ffbc00;
 }
@@ -334,12 +335,12 @@ body {
 .btn-secondary-outline.active {
   background: none;
   border-color: #215f88;
-  color: #215f88;
+  color: #215f88 !important;
 }
 .btn-secondary-outline:hover,
 .btn-secondary-outline:focus,
 .btn-secondary-outline.focus {
-  color: #ffffff;
+  color: #ffffff !important;
   background-color: #3e97d1;
   border-color: #3e97d1;
 }
@@ -354,12 +355,12 @@ body {
 .btn-info-outline.active {
   background: none;
   border-color: #992700;
-  color: #992700;
+  color: #992700 !important;
 }
 .btn-info-outline:hover,
 .btn-info-outline:focus,
 .btn-info-outline.focus {
-  color: #ffffff;
+  color: #ffffff !important;
   background-color: #ff4100;
   border-color: #ff4100;
 }
@@ -374,12 +375,12 @@ body {
 .btn-success-outline.active {
   background: none;
   border-color: #1b8d56;
-  color: #1b8d56;
+  color: #1b8d56 !important;
 }
 .btn-success-outline:hover,
 .btn-success-outline:focus,
 .btn-success-outline.focus {
-  color: #ffffff;
+  color: #ffffff !important;
   background-color: #36d88a;
   border-color: #36d88a;
 }
@@ -394,12 +395,12 @@ body {
 .btn-warning-outline.active {
   background: none;
   border-color: #8e8e8e;
-  color: #8e8e8e;
+  color: #8e8e8e !important;
 }
 .btn-warning-outline:hover,
 .btn-warning-outline:focus,
 .btn-warning-outline.focus {
-  color: #ffffff;
+  color: #ffffff !important;
   background-color: #c1c1c1;
   border-color: #c1c1c1;
 }
@@ -414,12 +415,12 @@ body {
 .btn-danger-outline.active {
   background: none;
   border-color: #111111;
-  color: #111111;
+  color: #111111 !important;
 }
 .btn-danger-outline:hover,
 .btn-danger-outline:focus,
 .btn-danger-outline.focus {
-  color: #ffffff;
+  color: #ffffff !important;
   background-color: #444444;
   border-color: #444444;
 }
@@ -434,12 +435,12 @@ body {
 .btn-black-outline.active {
   background: none;
   border-color: #000000;
-  color: #000000;
+  color: #000000 !important;
 }
 .btn-black-outline:hover,
 .btn-black-outline:focus,
 .btn-black-outline.focus {
-  color: #ffffff;
+  color: #ffffff !important;
   background-color: #333333;
   border-color: #333333;
 }
@@ -454,12 +455,12 @@ body {
 .btn-white-outline.active {
   background: none;
   border-color: #ffffff;
-  color: #ffffff;
+  color: #ffffff !important;
 }
 .btn-white-outline:hover,
 .btn-white-outline:focus,
 .btn-white-outline.focus {
-  color: #333333;
+  color: #333333 !important;
   background-color: #ffffff;
   border-color: #ffffff;
 }
