--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -96,12 +96,15 @@ body {
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  padding: 0.8rem 2rem;
-  border-radius: 0px;
+  display: -webkit-inline-flex;
   display: inline-flex;
+  -webkit-align-items: center;
   align-items: center;
+  -webkit-justify-content: center;
   justify-content: center;
   word-break: break-word;
+  padding: 0.8rem 2rem;
+  border-radius: 0px;
 }
 .btn-sm {
   font-weight: 600;
@@ -150,16 +153,16 @@ body {
 .btn-primary,
 .btn-primary:active,
 .btn-primary.active {
-  background-color: #ffbc00;
-  border-color: #ffbc00;
+  background-color: #ffbc00 !important;
+  border-color: #ffbc00 !important;
   color: #ffffff !important;
 }
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary.focus {
   color: #ffffff !important;
-  background-color: #b38400;
-  border-color: #b38400;
+  background-color: #b38400 !important;
+  border-color: #b38400 !important;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
@@ -170,16 +173,16 @@ body {
 .btn-secondary,
 .btn-secondary:active,
 .btn-secondary.active {
-  background-color: #3e97d1;
-  border-color: #3e97d1;
+  background-color: #3e97d1 !important;
+  border-color: #3e97d1 !important;
   color: #ffffff !important;
 }
 .btn-secondary:hover,
 .btn-secondary:focus,
 .btn-secondary.focus {
   color: #ffffff !important;
-  background-color: #256e9d;
-  border-color: #256e9d;
+  background-color: #256e9d !important;
+  border-color: #256e9d !important;
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
@@ -190,16 +193,16 @@ body {
 .btn-info,
 .btn-info:active,
 .btn-info.active {
-  background-color: #ff4100;
-  border-color: #ff4100;
+  background-color: #ff4100 !important;
+  border-color: #ff4100 !important;
   color: #ffffff !important;
 }
 .btn-info:hover,
 .btn-info:focus,
 .btn-info.focus {
   color: #ffffff !important;
-  background-color: #b32d00;
-  border-color: #b32d00;
+  background-color: #b32d00 !important;
+  border-color: #b32d00 !important;
 }
 .btn-info.disabled,
 .btn-info:disabled {
@@ -210,16 +213,16 @@ body {
 .btn-success,
 .btn-success:active,
 .btn-success.active {
-  background-color: #36d88a;
-  border-color: #36d88a;
+  background-color: #36d88a !important;
+  border-color: #36d88a !important;
   color: #ffffff !important;
 }
 .btn-success:hover,
 .btn-success:focus,
 .btn-success.focus {
   color: #ffffff !important;
-  background-color: #1fa263;
-  border-color: #1fa263;
+  background-color: #1fa263 !important;
+  border-color: #1fa263 !important;
 }
 .btn-success.disabled,
 .btn-success:disabled {
@@ -230,16 +233,16 @@ body {
 .btn-warning,
 .btn-warning:active,
 .btn-warning.active {
-  background-color: #c1c1c1;
-  border-color: #c1c1c1;
+  background-color: #c1c1c1 !important;
+  border-color: #c1c1c1 !important;
   color: #ffffff !important;
 }
 .btn-warning:hover,
 .btn-warning:focus,
 .btn-warning.focus {
   color: #ffffff !important;
-  background-color: #9b9b9b;
-  border-color: #9b9b9b;
+  background-color: #9b9b9b !important;
+  border-color: #9b9b9b !important;
 }
 .btn-warning.disabled,
 .btn-warning:disabled {
@@ -250,16 +253,16 @@ body {
 .btn-danger,
 .btn-danger:active,
 .btn-danger.active {
-  background-color: #444444;
-  border-color: #444444;
+  background-color: #444444 !important;
+  border-color: #444444 !important;
   color: #ffffff !important;
 }
 .btn-danger:hover,
 .btn-danger:focus,
 .btn-danger.focus {
   color: #ffffff !important;
-  background-color: #1e1e1e;
-  border-color: #1e1e1e;
+  background-color: #1e1e1e !important;
+  border-color: #1e1e1e !important;
 }
 .btn-danger.disabled,
 .btn-danger:disabled {
@@ -273,16 +276,16 @@ body {
 .btn-white,
 .btn-white:active,
 .btn-white.active {
-  background-color: #ffffff;
-  border-color: #ffffff;
+  background-color: #ffffff !important;
+  border-color: #ffffff !important;
   color: #808080 !important;
 }
 .btn-white:hover,
 .btn-white:focus,
 .btn-white.focus {
   color: #808080 !important;
-  background-color: #d9d9d9;
-  border-color: #d9d9d9;
+  background-color: #d9d9d9 !important;
+  border-color: #d9d9d9 !important;
 }
 .btn-white.disabled,
 .btn-white:disabled {
@@ -293,16 +296,16 @@ body {
 .btn-black,
 .btn-black:active,
 .btn-black.active {
-  background-color: #333333;
-  border-color: #333333;
+  background-color: #333333 !important;
+  border-color: #333333 !important;
   color: #ffffff !important;
 }
 .btn-black:hover,
 .btn-black:focus,
 .btn-black.focus {
   color: #ffffff !important;
-  background-color: #0d0d0d;
-  border-color: #0d0d0d;
+  background-color: #0d0d0d !important;
+  border-color: #0d0d0d !important;
 }
 .btn-black.disabled,
 .btn-black:disabled {
@@ -532,6 +535,10 @@ a.text-black:focus {
 .alert-danger {
   background-color: #444444;
 }
+.mbr-section-btn a.btn:not(.btn-form):hover,
+.mbr-section-btn a.btn:not(.btn-form):focus {
+  box-shadow: none !important;
+}
 .mbr-gallery-filter li.active .btn {
   background-color: #ffbc00;
   border-color: #ffbc00;
@@ -572,7 +579,7 @@ a:hover {
 }
 /* Scroll to top button*/
 .scrollToTop_wraper {
-  opacity: 0 !important;
+  display: none;
 }
 #scrollToTop a {
   background: #444444;
@@ -600,6 +607,7 @@ a:hover {
   height: 40%;
   left: 30%;
   bottom: 30%;
+  -webkit-transform: rotate(135deg);
   transform: rotate(135deg);
 }
 /* Others*/
@@ -647,6 +655,7 @@ a:hover {
   left: 50%;
   margin-left: -7px;
   position: absolute;
+  -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
   width: 14px;
 }
@@ -709,6 +718,7 @@ pre {
   user-drag: none;
 }
 .mbr-section__comments .row {
+  -webkit-justify-content: center;
   justify-content: center;
 }
 /* Forms */
@@ -776,6 +786,20 @@ html,
 body {
   height: auto;
   min-height: 100vh;
+}
+.dropup .dropdown-toggle::after {
+  display: none;
+}
+.jq-selectbox li:hover,
+.jq-selectbox li.selected {
+  background-color: #ffbc00;
+  color: #000000;
+}
+.jq-selectbox .jq-selectbox__trigger-arrow {
+  border-top-color: contrast(currentColor, #000000, #ffffff, 30%);
+}
+.jq-selectbox:hover .jq-selectbox__trigger-arrow {
+  border-top-color: #ffbc00;
 }
 .cid-qCWtFAJeOC .navbar {
   min-height: 77px;
@@ -1027,7 +1051,7 @@ body {
 }
 .cid-qCWtFAJeOC .nav-link:hover,
 .cid-qCWtFAJeOC .dropdown-item:hover {
-  color: #c1c1c1 !important;
+  color: #ff4100 !important;
 }
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   .cid-qCWtFAJeOC .navbar-dropdown.collapsed.opened {
